--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 # Site Author
 author:
   name             : "노찬의"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/노찬의.pg"
   bio              : "21044 노찬의"
   location         : "대한민국, 대전"
   email            : "21-21044@hafs.hs.kr"
