--- a/_config.yml
+++ b/_config.yml
@@ -95,8 +95,8 @@ analytics:
 # Site Author
 author:
   name             : "노찬의"
-  avatar           : "/assets/images/노찬의.pg"
-  bio              : "21044 노찬의"
+  avatar           : "/assets/images/노찬의.png"
+  bio              : "six lover"
   location         : "대한민국, 대전"
   email            : "21-21044@hafs.hs.kr"
   links:
